[package]
name = "kyoverlay"
description = "Text based keystrokes overlay"
version = "0.1.1"
authors = ["MarrieMitsu"]
edition = "2021"
readme = "./README.md"
repository = "https://github.com/MarrieMitsu/kyoverlay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures = "0.3.30"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["http1", "server"] }
hyper-tungstenite = "0.13.0"
hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"] }
inputbot = "0.6.0"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.21.0"
tungstenite = { version = "0.21.0", default-features = false }
